--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,16 +10,16 @@
     <color name="main_grey">#d9d9d9</color>
 
 
-    <color name="main_colour_">#A7D1D2</color>
-    <color name="colour_almost_main">#63898C</color>
+    <color name="main_colour_">#b4d6ad</color>
+    <color name="colour_almost_main">#72a75b</color>
 
-    <color name="add_colour_the_most_dark">#03081C</color>
+    <color name="add_colour_the_most_dark">#31402f</color>
 
 
     <color name="main_colour_black">#101116</color>
 
-    <color name="add_colour_2">#75BDC1</color>
-    <color name="add_colour_3_text_btn">#CAE9EC</color>
+    <color name="add_colour_2">#5d8d5d</color>
+    <color name="add_colour_3_text_btn">#FFFFFFFF</color>
 
     <color name="prog_bar_grey">#4C4848</color>
     <color name="prog_bar_end_colour">#F81313</color>
