--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -72,6 +72,7 @@
         android:id="@+id/lottie_anim_progress"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintDimensionRatio="1,2"
         app:layout_constraintStart_toStartOf="@id/guideline_vert_20"
         app:layout_constraintEnd_toEndOf="@id/guideline_vert_80"
