--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -105,7 +105,7 @@
         android:layout_height="0dp"
         android:layout_margin="64dp"
         android:elevation="1dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@id/btn_copy"
