--- a/app/src/main/res/navigation/ap_nav.xml
+++ b/app/src/main/res/navigation/ap_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.passpackfour.passgeneratorplants.StartFragment"
+        android:name="com.passpackfive.passgeneratorcomputers.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" >
         <action
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
-        android:name="com.passpackfour.passgeneratorplants.ResultFragment"
+        android:name="com.passpackfive.passgeneratorcomputers.ResultFragment"
         android:label="fragment_result"
         tools:layout="@layout/fragment_result" >
         <action
@@ -41,7 +41,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.passpackfour.passgeneratorplants.SettingsFragment"
+        android:name="com.passpackfive.passgeneratorcomputers.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
